--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -8,6 +8,7 @@
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
+  z-index: 2;
 
   &-mask {
     background: rgba(0, 0, 0, 0.8);
@@ -19,6 +20,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
   }
 
   &-close {
@@ -51,8 +53,9 @@
     border-top: 1px solid #f0f0f0;
     display: flex;
     justify-content: flex-end;
-    & button:not(:last-of-type){
-      margin-right:0.2em;
+
+    & button:not(:last-of-type) {
+      margin-right: 0.2em;
     }
   }
 }
