--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -5,6 +5,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
