增加layout example scss

--- a/lib/layout/layout.scss
+++ b/lib/layout/layout.scss
@@ -1,3 +1,18 @@
 .xrui-layout {
-
-}
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  & & {
+    flex-grow: 1;
+    flex-direction: row;
+    }
+  &-hasAside {
+    flex-direction: row;
+    & .xrui-layout {
+      flex-direction: column;
+      }
+    }
+  &-content {
+    flex-grow: 1;
+    }
+  }
