--- a/lib/layout/layout.scss
+++ b/lib/layout/layout.scss
@@ -1,17 +1,20 @@
 .xrui-layout {
   display: flex;
   flex-direction: column;
-  & & {
-    flex-grow: 1;
-    flex-direction: row;
-    }
   &-hasAside {
     flex-direction: row;
-    & .xrui-layout {
-      flex-direction: column;
-      }
-    }
+  }
+  & & {
+    flex-grow: 1;
+  }
+  & &-hasAside {
+    flex-grow: 1;
+    flex-direction: row;
+  }
+  & > &-hasAside {
+    flex-direction: row;
+  }
   &-content {
     flex-grow: 1;
-    }
   }
+}
