--- a/lib/layout/layout.example.scss
+++ b/lib/layout/layout.example.scss
@@ -1,22 +1,19 @@
 .x {
   height: 40px;
-  background: #ea4335;
+  background: rgba(234, 67, 53, 0.8);
   margin: 0.2em 0;
   color: #fff;
-}
-
+  }
 .y {
-  background: #fbbc05;
+  background: rgba(251, 188, 5, 0.8);
   margin: 0.2em 0;
   color: #fff;
-}
-
+  }
 .z {
-  background: #ea4335;
+  background: rgba(234, 67, 53, 0.8);
   margin: 0.2em 0;
   color: #fff;
-}
-
+  }
 .z + .y, .y + .z, .z + .xrui-layout {
   margin-left: 0.4em;
-}
+  }
