添加展示code中间件Middleware 官网调用组件改为demo (rename一些组件)

--- a/example.scss
+++ b/example.scss
@@ -60,6 +60,9 @@ ul, ol {
     & h3 {
       margin: 16px auto;
     }
+    & pre {
+      margin-top: 16px;
+    }
   }
   &-footer {
     padding: 8px;
