Button 内容添加Icon功能

--- a/lib/button/button.scss
+++ b/lib/button/button.scss
@@ -6,15 +6,18 @@
   background: #fff;
   position: relative;
   overflow: hidden;
-
   & .xrui-button_content {
     position: relative;
     z-index: 2;
+    & .xrui-icon {
+      margin: 0 0.2em;
+    }
   }
-
   & .xrui-button_span {
     position: absolute;
     display: inline-block;
+    vertical-align: middle;
+    align-items: center;
     width: 5px;
     height: 5px;
     background: lighten(#ccc, 10%);
@@ -23,12 +26,10 @@
     z-index: 1;
   }
 }
-
 .xrui-button:focus {
   outline: none;
   border-color: #000;
 }
-
 @keyframes bigger {
   0% {
     transform: scale(0.5)
