--- a/lib/icon/icon.scss
+++ b/lib/icon/icon.scss
@@ -1,6 +1,7 @@
-.xrui-icon{
+.xrui-icon {
   display: inline-block;
-  width:1em;
-  height:1em;
-  fill:currentColor;
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  vertical-align: -0.128em;
 }
