官网logo添加链接

--- a/example.scss
+++ b/example.scss
@@ -24,6 +24,11 @@ ul, ol {
     height: 50px;
     & .wrapped {
       height: 100%;
+      & span{
+          display: inline-flex;
+          vertical-align: middle;
+          align-items: center;
+      }
       display: flex;
       align-items: center;
     }
