--- a/lib/input/input.scss
+++ b/lib/input/input.scss
@@ -5,10 +5,10 @@
     height: 30px;
     border-radius: 4px;
     outline: none;
-    box-shadow: 0 0 4px fade_out(blue, 1);
+    box-shadow: 0 0 2px fade_out(#3bb4f2, 1);
     transition: box-shadow 0.2s ease-in;
     &:focus {
-        border-color: blue;
-        box-shadow: 0 0 10px fade_out(blue, 0.5);
+        border-color: #3bb4f2;
+        box-shadow: 0 0 2px fade_out(#3bb4f2, 0.5);
     }
 }
