--- a/lib/form/form.scss
+++ b/lib/form/form.scss
@@ -19,6 +19,7 @@
     outline: none;
     &:focus {
       border-color: #000;
+      box-shadow: 0 0 2px fade_out(#000, 0.5)
     }
   }
   .error {
