--- a/example.scss
+++ b/example.scss
@@ -75,7 +75,7 @@ ul, ol {
   &-footer {
     padding: 8px;
     margin-top: 8px;
-    background: #ccc;
+    background: #f0f0f0;
     text-align: center;
   }
 }
