remove unnecessary example add calculated scrollbar height

--- a/lib/scroll/scroll.scss
+++ b/lib/scroll/scroll.scss
@@ -9,4 +9,19 @@
     left: 0;
     bottom: 0;
   }
+  &-track {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 10px;
+    height: 100%;
+    border: 1px solid blue;
+  }
+  &-bar {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: red;
+  }
 }
