--- a/lib/scroll/scroll.scss
+++ b/lib/scroll/scroll.scss
@@ -15,13 +15,13 @@
     right: 0;
     width: 10px;
     height: 100%;
-    border: 1px solid blue;
   }
   &-bar {
-    width: 100%;
+    width: 6px;
     position: absolute;
     top: 0;
-    left: 0;
-    background: red;
+    left: 2px;
+    background: rgba(128, 128, 128, 0.8);
+    border-radius: 3px;
   }
 }
